test/files/neg/t639.scala
package foo123

import a._

@B
class C
