test/files/neg/t639.check
t639.scala:3: error: not found: object a
import a._
       ^
t639.scala:5: error: not found: type B
@B
 ^
two errors found
